// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`createTemplate: CustomElement hoisting its styles 1`] = `
{
  "content": 
"<nested-component>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_2p8uqox{font-weight:bold;}
        </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-component>"
,
  "stylesheets": [],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom & hoist styles 1`] = `
{
  "content": 
"<nested-component class="nestedComponent cls_dqiix cls_13vh1nn">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_2p8uqox{font-weight:bold;}
        </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-component>"
,
  "stylesheets": [
    ".cls_dqiix{display:flex;}",
    ".cls_13vh1nn{flex-direction:column;}",
  ],
}
`;

exports[`createTemplate: CustomElement with styled slotted component 1`] = `
{
  "content": 
"<nested-component class="slottedParagraph cls_1v0nksu">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_2p8uqox{font-weight:bold;}
        </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
    <p slot="nested">slotted paragraph</p>
</nested-component>"
,
  "stylesheets": [
    ".cls_1v0nksu{color:rebeccapurple;}",
  ],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom 1`] = `
{
  "content": 
"<top-component>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_1v0nksu{color:rebeccapurple;}
        </style>
        <nested-component class="slottedParagraph cls_1v0nksu">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .cls_2p8uqox{font-weight:bold;}
                </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-component>
    </template>
</top-component>"
,
  "stylesheets": [],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom plus host styles 1`] = `
{
  "content": 
"<top-component class="topComponent cls_qt6ejx">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_1v0nksu{color:rebeccapurple;}
        </style>
        <nested-component class="slottedParagraph cls_1v0nksu">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .cls_2p8uqox{font-weight:bold;}
                </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-component>
    </template>
</top-component>"
,
  "stylesheets": [
    ".cls_qt6ejx{display:block;}",
  ],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom plus host styles and child 1`] = `
{
  "content": 
"<top-component class="topComponent cls_qt6ejx">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_1v0nksu{color:rebeccapurple;}
        </style>
        <nested-component class="slottedParagraph cls_1v0nksu">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .cls_2p8uqox{font-weight:bold;}
                </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-component>
    </template>
    <img class="image cls_2h7uhvs cls_16johir" />
</top-component>"
,
  "stylesheets": [
    ".cls_qt6ejx{display:block;}",
    ".cls_2h7uhvs{width:100%;}",
    ".cls_16johir{aspect-ratio:16 / 9;}",
  ],
}
`;
